--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
     <main id="mainContent">
         <section class="hero" id="heroSection">
             <div class="container">
-                <h1>Best blogging platform for writers and explorers</h1>
+                <h1>Uhoh...! we are almost there, final website developments are in progress</h1>
                 <p>An open source platform to share your thoughts, ideas, and stories with the world | A professional platform for bloggers to post | An organized platform for explorers to read and refer the content throughout the world</p>
                 <div class="hero-buttons">
                     <a href="#" id="heroCta" class="btn btn-accent">Start Writing Now</a>
