--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BlogRack - Professional Blogging Platform</title>
+    <title>BlogRack</title>
     <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -1299,7 +1299,7 @@
     <main id="mainContent">
         <section class="hero" id="heroSection">
             <div class="container">
-                <h1>Professional Blogging Platform</h1>
+                <h1>The free blogging platform you deserve</h1>
                 <p>An open source platform to share your thoughts, ideas, and stories with the world | A professional platform for bloggers to post | An organized platform for explorers to read and refer the content throughout the world</p>
                 <div class="hero-buttons">
                     <a href="#" id="heroCta" class="btn btn-accent">Start Writing Now</a>
