--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="bD25FlddJ5iUqCTYXs1uNvs0QwCCiqVysJ-89a6rxLQ" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogRack</title>
@@ -3150,3 +3151,4 @@
     </script>
 </body>
 </html>
+
