--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta name="google-site-verification" content="bD25FlddJ5iUqCTYXs1uNvs0QwCCiqVysJ-89a6rxLQ" />
+    <meta name="description" content="Create and share your blog posts instantly with BlogRack — the free, easy-to-use platform for bloggers of all levels. Start blogging today!">
+    <meta name="robots" content="index, follow">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogRack</title>
@@ -3151,4 +3153,5 @@
     </script>
 </body>
 </html>
+
 
