--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <meta name="robots" content="index, follow">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="BlogRack is a comprehensive professional blogging platform for content creators. Write, publish, and share your stories with the world. Features include rich text editor, social sharing, user management, and SEO optimization.">
+    <meta name="keywords" content="blogging platform, content creation, blog writing, online publishing, social sharing, professional blogging, content management, story publishing, writing platform, blog editor">
+    <meta name="author" content="BlogRack">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+    <meta name="language" content="English">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://mywebview.github.io/BlogRack/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mywebview.github.io/BlogRack/">
+    <meta property="og:title" content="BlogRack - Professional Blogging Platform">
+    <meta property="og:description" content="Professional blogging platform for content creators. Write, publish and share your stories with the world. Features rich text editor, social sharing, and SEO optimization.">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://mywebview.github.io/BlogRack/">
+    <meta name="twitter:title" content="BlogRack - Professional Blogging Platform">
+    <meta name="twitter:description" content="Professional blogging platform for content creators. Write, publish and share your stories with the world.">
+    <meta name="twitter:creator" content="@blograck">
+    <meta name="twitter:site" content="@blograck">
     <title>BlogRack</title>
     <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -3153,5 +3174,6 @@
     </script>
 </body>
 </html>
+
 
 
