--- a/index.html
+++ b/index.html
@@ -1607,20 +1607,24 @@
                         <img src="logo.png" alt="BlogRack Logo">
                         <span class="footer-logo-text">BlogRack</span>
                     </div>
-                    <p>Your professional blogging platform to share ideas, stories, and knowledge with the world.</p>
+                    <p>Professional blogging platform for content creators worldwide with:</p>
+		    <ul><li>Rich text editor</li>
+			<li>Real-time synchronization</li>
+			<li>Search engine optimization</li>
+			<li>And more......!</li?
+		    </ul>
                 </div>
                 <div class="footer-column">
-                    <h3>Quick Links</h3>
+                    <h3>Quick links</h3>
                     <ul>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Home</a></li>
+                        <li><a href="#"><i class="fas fa-chevron-right"></i> Explore blogs</a></li>
                         <li><a href="#"><i class="fas fa-chevron-right"></i> About</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Privacy Policy</a></li>
+                        <li><a href="mailto:blograckconnect@gmail.com"><i class="fas fa-chevron-right"></i> Contact us</a>
+  			<li><a href="#" class="privacy-link" id="privacyPolicyLink" target="_blank">🔏 Privacy policy</a>
+</li>
                     </ul>
                 </div>
-                <div class="footer-column">
-                    <h3>Contact</h3>
-                    <p><a href="mailto:blograckconnect@gmail.com" class="footer-link">Contact Us</a></p>
-                </div>
+               
                 <div class="footer-column">
                     <h3>Newsletter</h3>
                     <p>Subscribe to get the latest updates</p>
@@ -1635,11 +1639,10 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 BlogRack. All rights reserved. | Designed with <i class="fas fa-heart" style="color: var(--accent);"></i> for bloggers</p>
+                <p>&copy; 2025 BlogRack. All rights reserved. Professional blogging platform for creators worldwide.</p>
             </div>
         </div>
     </footer>
-
     <div class="toast" id="toast">
         <i class="fas fa-check-circle"></i>
         <span id="toastMessage">Operation successful!</span>
@@ -3174,6 +3177,7 @@
     </script>
 </body>
 </html>
+
 
 
 
