--- a/index.html
+++ b/index.html
@@ -1618,9 +1618,8 @@
                     <h3>Quick links</h3>
                     <ul>
                         <li><a href="#"><i class="fas fa-chevron-right"></i> Explore blogs</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> About</a></li>
                         <li><a href="mailto:blograckconnect@gmail.com"><i class="fas fa-chevron-right"></i> Contact us</a>
-  			<li><a href="#" class="privacy-link" id="privacyPolicyLink" target="_blank">🔏 Privacy policy</a>
+  			<li><a href="https://mywebview.github.io/brpolicy/" class="privacy-link" id="privacyPolicyLink" target="_blank">🔏 Privacy policy</a>
 </li>
                     </ul>
                 </div>
@@ -3177,6 +3176,7 @@
     </script>
 </body>
 </html>
+
 
 
 
